Fixed bug where add item form cannot be scrolled when overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -139,10 +139,6 @@ a:hover {
   border: 2px var(--primary-color) solid;
 }
 
-form {
-  overflow-y: auto;
-}
-
 form::-webkit-scrollbar {
   display: none;
 }
